--- a/KommuneEditor/App.config
+++ b/KommuneEditor/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/>
     </startup>
   <connectionStrings>
-    <add name="post" connectionString="Data Source=SKINDSTSTAD\SQLEXPRESS;
-         Initial Catalog=Test;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="post" connectionString="Data Source=DESKTOP-OF45N5B\SQLEXPRESS;
+         Initial Catalog=Keypoint;Integrated Security=True" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
